<resources>

    <string name="app_name">Course Selection Guide</string>
    <string name="recommended_lessons">دروس پیشنهادی</string>
    <string name="selected_lessons">دروس انتخاب شده</string>
    <string name="manual_selection">انتخاب دستی</string>
    <string name="state">وضعیت</string>
    <string name="add_new_lesson">افزودن درس جدید</string>
    <string name="clear_list">پاک کردن لیست</string>
    <string name="theoretical_units_sum">جمع واحدهای نظری</string>
    <string name="practical_units_sum">جمع واحدهای عملی</string>
    <string name="all_units_sum">جمع کل واحدها</string>
    <string name="add_recommended_to_selected">افزودن لیست به دروس انتخاب شده</string>
    <string name="show_new_recommended_list">نمایش لیست جدید</string>
    <string name="passed_lessons">دروس گذرانده</string>
    <string name="failed_lessons">دروس رد/حذف‌شده</string>
    <string name="remained_lessons">دروس باقی‌مانده</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="passed_units">واحدهای گذرانده</string>
    <string name="failed_units">واحدهای رد/حذف‌شده</string>
    <string name="remained_units">واحدهای باقی‌مانده</string>

    //lesson state
    <string name="remained">باقی‌مانده</string>
    <string name="passed">گذرانده</string>
    <string name="failed">رد/حذف‌شده</string>
    <string name="selected">انتخاب شده</string>
    <string name="recommended">پیشنهادی</string>

    //lesson type
    <string name="general">عمومی</string>
    <string name="islamic_general">عمومی اسلامی</string>
    <string name="basic">پایه</string>
    <string name="main">اصلی</string>
    <string name="specialized">تخصصی</string>
    <string name="focused_specialized">تمرکز تخصصی</string>
    <string name="optional">اختیاری</string>

    //lesson orientation
    <string name="theoretical_foundations_of_islam">مبانی نظری اسلام</string>
    <string name="islamic_ethics">اخلاق اسلامی</string>
    <string name="islamic_revolution">انقلاب اسلامی</string>
    <string name="islamic_history_and_civilization">تاریخ و تمدن اسلامی</string>
    <string name="familiarity_with_islamic_sources">آشنایی با منابع اسلامی</string>
    <string name="software_systems">سیستم های نرم افزاری</string>
    <string name="information_systems">سیستم های اطلاعاتی</string>
    <string name="computer_games">باری های کامپیوتری</string>
    <string name="artificial_intelligence">هوش مصنوعی</string>

    //user state
    <string name="excellent">ممتاز</string>
    <string name="normal">معمولی</string>
    <string name="senior">ترم آخر</string>
    <string name="add_to_selected">افزودن درس به دروس انتخاب شده</string>
    <string name="add_to_passed">افزودن درس به دروس گذرانده</string>
    <string name="add_to_failed">افزودن درس به دروس رد/حذف شده</string>
    <string name="remove_from_selected">حذف درس از لیست انتخاب شده</string>
    <string name="remove_from_passed">حذف درس از لیست گذرانده</string>
    <string name="remove_from_failed">حذف درس از لیست رد/حذف شده</string>
    <string name="conditional">مشروطی</string>
    <string name="add_recommended_to_passed">افزودن لیست به دروس گذرانده</string>
    <string name="add_selected_list_to_passed">افزودن لیست به دروس گذرانده</string>

</resources>